src/test/deca/context/valid/declMethod-withCast.deca
class A {
}

class C extends A {
}

class B extends A {
    C x;

    A castX() {
        return (A) (this.x);
    }
}