src/test/deca/context/invalid/declMethod-invalidStringReturnType.deca
class A {
    string konohamaru() {
        return "le bg";
    }
}

class B extends A {
    string konohamaru() {
        return "le super bg";
    }
}